Monte Carlo aprox

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,5 +7,7 @@ set(CMAKE_CXX_FLAGS_RELEASE "-O3 -g")
 file(GLOB HEADERS "*.h")
 
 add_executable(test_img tests/test_img.cpp)
+add_executable(pi tests/pi.cpp)
+add_executable(mc_int tests/mc_integration.cpp)
 
 add_executable(main src/main ${HEADERS})
