--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,4 +10,5 @@ add_executable(test_img tests/test_img.cpp)
 add_executable(pi tests/pi.cpp)
 add_executable(mc_int tests/mc_integration.cpp)
 
-add_executable(main src/main ${HEADERS})
+add_executable(main src/main.cpp ${HEADERS})
+add_executable(cornell_box src/cornell_box.cpp ${HEADERS})
